k8s/keybuzz-admin-v2-prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: keybuzz-admin-v2
  name: keybuzz-admin-v2
  namespace: keybuzz-admin-v2-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keybuzz-admin-v2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: keybuzz-admin-v2
    spec:
      containers:
      - name: keybuzz-admin-v2
        # PH-SAAS-T8.12AS.21.223 tenant column filters PROD; digest sha256:67935abe5df86e3215c48a98eb66ec9239fad7af2edc6a1e1b6ff781626fbdec; source af5eaaaf1d87de2c42839db7afe98e204be724f1; rollback: v2.12.3-support-impersonation-prod
        image: ghcr.io/keybuzzio/keybuzz-admin:v2.12.4-tenant-column-filters-prod
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: http
        livenessProbe:
          httpGet:
            path: /login
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /login
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 300m
            memory: 384Mi
      imagePullSecrets:
      - name: ghcr-secret
